Implemented Save Patient

--- a/src/Services/Patient/appsettings.json
+++ b/src/Services/Patient/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-4AQ01E7\\SQLEXPRESS;Database=HealthClinic;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=192.168.1.23,1433;Database=HealthClinic;MultipleActiveResultSets=true;User Id=default;Password=Test1234!"
   },
   "Logging": {
     "LogLevel": {
