--- a/src/ApiGateways/Gateway/appsettings.json
+++ b/src/ApiGateways/Gateway/appsettings.json
@@ -1,21 +1,19 @@
 {
   "GlobalConfiguration": {
-    "RequestIdKey": "OcRequestId",
-    "AdministrationPath": "/administration"
+    "RequestIdKey": "OcRequestId"
   },
   "ReRoutes": [
     {
-      "DownstreamPathTemplate": "/api/patient/getall",
-      "DownstreamScheme": "https",
+      "DownstreamPathTemplate": "/api/patient/{everything}",
+      "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "patient",
-          "Port": 443
+          "Host": "Patient",
+          "Port": 80
         }
       ],
-      "DownstreamHost": "patient",
-      "UpstreamPathTemplate": "/api/patient/getall",
-      "UpstreamHttpMethod": [ "Get" ]
+      "UpstreamPathTemplate": "/api/patient/{everything}",
+      "UpstreamHttpMethod": [ "POST", "PUT", "GET", "DELETE" ]
     }
   ]
 }
