--- a/src/Services/Patient/Patient.csproj
+++ b/src/Services/Patient/Patient.csproj
@@ -19,5 +19,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\HealthClinic.Common\HealthClinic.Common.csproj" />
+  </ItemGroup>
+
 
 </Project>
