extended gateway config + fixed post

--- a/src/ApiGateways/Gateway/appsettings.json
+++ b/src/ApiGateways/Gateway/appsettings.json
@@ -4,6 +4,18 @@
   },
   "ReRoutes": [
     {
+      "DownstreamPathTemplate": "/api/patient/",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "Patient",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/api/patient/",
+      "UpstreamHttpMethod": [ "POST", "PUT", "GET", "DELETE" ]
+    },
+    {
       "DownstreamPathTemplate": "/api/patient/{everything}",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
