--- a/src/Web/HealthClinic.Web/appsettings.json
+++ b/src/Web/HealthClinic.Web/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "PatientBaseUrl": "https://localhost:32868/Patient/"
+  "PatientBaseUrl": "http://gateway/api/patient/"
 }
