--- a/src/ApiGateways/Gateway/appsettings.json
+++ b/src/ApiGateways/Gateway/appsettings.json
@@ -26,6 +26,30 @@
       ],
       "UpstreamPathTemplate": "/api/patient/{everything}",
       "UpstreamHttpMethod": [ "POST", "PUT", "GET", "DELETE" ]
+    },
+    {
+      "DownstreamPathTemplate": "/api/patientnotes/",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "PatientNotes",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/api/patientnotes/",
+      "UpstreamHttpMethod": [ "POST", "PUT", "GET", "DELETE" ]
+    },
+    {
+      "DownstreamPathTemplate": "/api/patientnotes/{everything}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "PatientNotes",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/api/patientnotes/{everything}",
+      "UpstreamHttpMethod": [ "POST", "PUT", "GET", "DELETE" ]
     }
   ]
 }
