--- a/src/Services/PatientNotes/appsettings.json
+++ b/src/Services/PatientNotes/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "DefaultConnection": "mongodb://192.168.1.23:27017",
   "AllowedHosts": "*"
 }
