Implemented NoSql Crud operations

--- a/src/Services/PatientNotes/appsettings.json
+++ b/src/Services/PatientNotes/appsettings.json
@@ -1,11 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "mongodb://192.168.1.23:27017"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "DefaultConnection": "mongodb://192.168.1.23:27017",
+  },  
   "AllowedHosts": "*"
 }
