--- a/src/Services/PatientNotes/PatientNotes.csproj
+++ b/src/Services/PatientNotes/PatientNotes.csproj
@@ -15,5 +15,9 @@
     <PackageReference Include="MongoDB.Driver.Core" Version="2.10.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\HealthClinic.Common\HealthClinic.Common.csproj" />
+  </ItemGroup>
+
 
 </Project>
