--- a/src/Services/PatientNotes/appsettings.json
+++ b/src/Services/PatientNotes/appsettings.json
@@ -8,6 +8,7 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },  
-  "AllowedHosts": "*"
+  },
+  "AllowedHosts": "*",
+  "PatientBaseUrl": "http://gateway/api/patient/"
 }
