Implemented PatientNote Edit + View + Refactoring

--- a/src/Web/HealthClinic.Web/appsettings.json
+++ b/src/Web/HealthClinic.Web/appsettings.json
@@ -7,5 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "PatientBaseUrl": "http://gateway/api/patient/"
+  "PatientBaseUrl": "http://gateway/api/patient/",
+  "PatientNotesBaseUrl": "http://gateway/api/patientnotes/"
 }
