Added new project for diabetes risk service

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -19,6 +19,12 @@ services:
       context: .
       dockerfile: Services/PatientNotes/Dockerfile
 
+  diabetesrisk:
+    image: diabetesrisk
+    build:
+      context: .
+      dockerfile: Services/DiabetesRisk/Dockerfile
+
   frontend:
     image: frontend
     build:
