--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -17,6 +17,22 @@ services:
       - "80"
       - "443"
 
+  patientnotes:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+    ports:
+      - "80"
+      - "443"
+
+  diabetesrisk:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+    ports:
+      - "80"
+      - "443"
+
   frontend:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
