DiabetesRisk Service Infrastructure

--- a/src/Services/DiabetesRisk/appsettings.json
+++ b/src/Services/DiabetesRisk/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PatientBaseUrl": "http://gateway/api/patient/",
+  "PatientNotesBaseUrl": "http://gateway/api/patientnotes/"
 }
