--- a/src/Services/DiabetesRisk/DiabetesRisk.csproj
+++ b/src/Services/DiabetesRisk/DiabetesRisk.csproj
@@ -9,10 +9,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\HealthClinic.Common\HealthClinic.Common.csproj" />
   </ItemGroup>
 
 
