--- a/src/ApiGateways/Gateway/appsettings.json
+++ b/src/ApiGateways/Gateway/appsettings.json
@@ -72,7 +72,7 @@
           "Port": 80
         }
       ],
-      "UpstreamPathTemplate": "/api/patientnotes/{everything}",
+      "UpstreamPathTemplate": "/api/diabetesrisk/{everything}",
       "UpstreamHttpMethod": [ "POST", "PUT", "GET", "DELETE" ]
     }
   ]
