--- a/src/Web/HealthClinic.Web/appsettings.json
+++ b/src/Web/HealthClinic.Web/appsettings.json
@@ -8,5 +8,6 @@
   },
   "AllowedHosts": "*",
   "PatientBaseUrl": "http://gateway/api/patient/",
-  "PatientNotesBaseUrl": "http://gateway/api/patientnotes/"
+  "PatientNotesBaseUrl": "http://gateway/api/patientnotes/",
+  "DiabetesRiskBaseUrl": "http://gateway/api/diabetesrisk/"
 }
